# suipy

./: .gitignore  Cargo.toml  README.md  pysui.pyi  test.py
src/: lib.rs  objects.rs  send.rs
